<resources>
    <string name="app_name">Events App</string>
    <string name="events">Events</string>
    <string name="more">More</string>
    <string name="screen_on">Screen on</string>
    <string name="screen_off">Screen off</string>
    <string name="battery_charging_on">Battery charging on</string>
    <string name="battery_charging_off">Battery charging off</string>
    <string name="power_connected">Power connected</string>
    <string name="power_disconnected">Power disconnected</string>
    <string name="wifi_on">Wifi on</string>
    <string name="wifi_off">Wifi off</string>
    <string name="bluetooth_on">Bluetooth on</string>
    <string name="bluetooth_off">Bluetooth off</string>
    <string name="headphones_on">Headphones on</string>
    <string name="headphones_off">Headphones off</string>
    <string name="airplane_on">Airplane mode on</string>
    <string name="airplane_off">Airplane mode off</string>
    <string name="timezone_changed">Timezone changed</string>
    <string name="battery_full">Battery full</string>


<!--    <string name="airplane_off">Airplane off</string>-->
    <string name="text_battery_low">Battery low</string>
    <string name="text_time_zone_changed">Time zone changed</string>
    <string name="text_time_changed">Time changed</string>
    <string name="text_date_changed">Date changed</string>
    <string name="wifi_connected">WIFI connected</string>
    <string name="wifi_disconnected">WIFI disconnected</string>
    <string name="enable_receivers">Enable Receivers</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="enabled">Events app is working</string>
    <string name="delete_text">Are you sure delete this action?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enabled_all_events">\tEnabled all events</string>
    <string name="disabled_all_events">\tDisabled all events</string>
    <string name="share_app">\tShare app</string>
    <string name="rate_app">\tRate app</string>
    <string name="feedback">\tFeedback</string>
</resources>