<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_bottom_sheet_dialog"
    android:paddingHorizontal="8dp"
    android:paddingVertical="16dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/line"
        android:layout_width="40dp"
        android:layout_height="4dp"
        android:background="@drawable/background_bottom_sheet_dialog_line"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/line">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/share_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:drawableStart="@drawable/ic_share"
            android:padding="16dp"
            android:text="@string/share_app"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:drawableTint="@color/on_dark_blue" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/rate_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:drawableStart="@drawable/ic_rate"
            android:padding="16dp"
            android:text="@string/rate_app"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:drawableTint="@color/on_dark_blue" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:drawableStart="@drawable/ic_feedback"
            android:padding="16dp"
            android:text="@string/feedback"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:drawableTint="@color/on_dark_blue" />


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>