<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:layout_marginHorizontal="36dp"
    android:background="@color/deep_blue"
    android:elevation="36dp">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/enable_receivers"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/on_deep_blue" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerDialog"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottomBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        tools:listitem="@layout/item_of_dialog" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/on_deep_blue"
        app:layout_constraintBottom_toTopOf="@id/bottomBar" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/bottomBar"
        android:layout_width="wrap_content"
        android:layout_height="?android:actionBarSize"
        android:background="@color/deep_blue"
        android:gravity="end|center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cancelBtn"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/shape_button"
            android:gravity="center"
            android:paddingVertical="4dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/okBtn"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:background="@drawable/shape_button"
            android:enabled="false"
            android:gravity="center"
            android:paddingVertical="4dp"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>